# us144mkii

./: .gitignore  Linux Driver Development Specification for TASCAM US-144 MKII.txt  Makefile  README.md  build_and_install.sh  capture.c  capture.h  controls.c  controls.h  midi.c  midi.h  midi_test.c  pcm.c  pcm.h  playback.c  playback.h  run_tascam_streamer.sh  tascam_fifo_streamer.c  tascam_streamer  tascam_test_program.c  tascam_test_program_jack.c  test_program_jack_star.sh  us122mkii.c  us144mkii.c  us144mkii.h  us144mkii.ko  us144mkii_capture.c  us144mkii_controls.c  us144mkii_midi.c  us144mkii_pcm.c  us144mkii_pcm.h  us144mkii_playback.c  usb_info  working midi out
.github/: copilot-instructions.md
latest_alsa_kernel_driver/: us144mk2.ko
latest_libusb_binary/: tascam_streamer
latest_reverse_eng_report/: Linux Driver Development Specification for TASCAM US-144 MKII.txt
raw_jack_us144mkii/: Makefile  jack_tascam.c  start_tascam_raw.sh  tascam_common.h  tascam_raw.c
reverse_eng_dataset/: 24bit_44.1k_440_TONE_URB_ISO_OUT.txt  24bit_48k_440_TONE_URB_ISO_OUT.txt  24bit_48k_BUZZ_LINE_IN_URB_BULK_0x86_IN.txt  24bit_48k_BUZZ_TONE_LINE_IN_URB_ISO_IN.txt  24bit_48k_LINE_ORGAN_INST_4_NOTE_CHORD__PLAYBACK_440_TONE.txt  24bit_48k_LINE_ORGAN_INST_4_NOTE_CHORD__PLAYBACK_SILENCE.txt  24bit_48k_LINE_SILENCE__PLAYBACK440_SINE.txt  (+19 more)
tascam_controls/: CMakeLists.txt  build_appimage.sh  tascam-control-panel.desktop  tascam-controls.py
tascam_controls/resources/: resources.qrc
tascam_controls/src/: alsacontroller.cpp  alsacontroller.h  mainwindow.cpp  mainwindow.h
(+5 files in other folders)
